--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1108,6 +1108,37 @@
     "            return True\n",
     "        return False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Pascal triangle 2\n",
+    "\n",
+    "class Solution:\n",
+    "    def getRow(self, n: int) -> List[int]:\n",
+    "        n=n+1\n",
+    "        lst = []\n",
+    "        lst_final=[]\n",
+    "        for i in range(n):\n",
+    "            if i==0:\n",
+    "                lst.append(1)\n",
+    "                lst_final.append(lst.copy())\n",
+    "                lst.clear()\n",
+    "    \n",
+    "            else:\n",
+    "                for j in range(i+1):\n",
+    "                    if j==0 or j==(i):\n",
+    "                        lst.append(1)\n",
+    "                    else:\n",
+    "                        lst.append(lst_final[i-1][j-1]+lst_final[i-1][j])\n",
+    "                lst_final.append(lst.copy())\n",
+    "                lst.clear()          \n",
+    "        return lst_final[-1]\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
