--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -405,6 +405,93 @@
     "       head.next = self.insert_at_tail(head.next,data)\n",
     "       return head"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000-->10-->20-->100000-->"
+     ]
+    }
+   ],
+   "source": [
+    "## Insert at an index\n",
+    "\n",
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    while(head!=None):\n",
+    "        print(head.d,end=\"-->\")\n",
+    "        head=head.next\n",
+    "def insert_at_head(data,head):\n",
+    "    nnNode = SLL(data)\n",
+    "    nnNode.next = head\n",
+    "    head = nnNode\n",
+    "    return head\n",
+    "def insert_at_tail(data,head):\n",
+    "    tailNode = SLL(data)\n",
+    "    if head==None:\n",
+    "        return tailNode\n",
+    "    else:\n",
+    "        temp = head\n",
+    "        while(temp.next!=None):\n",
+    "            temp = temp.next\n",
+    "        temp.next = tailNode\n",
+    "    return head\n",
+    "def insert_at_an_index(head, index, data):\n",
+    "    temp = head\n",
+    "    count = 0\n",
+    "    if temp is None:\n",
+    "        dd = SLL(data)\n",
+    "        temp = dd\n",
+    "        head = temp\n",
+    "        return head\n",
+    "    while temp is not None:\n",
+    "        count += 1\n",
+    "        if count == index:\n",
+    "            new_node = SLL(data)\n",
+    "            new_node.next = temp.next\n",
+    "            temp.next = new_node\n",
+    "            return head\n",
+    "        temp = temp.next\n",
+    "    return head\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip()\n",
+    "#pLL(newHead)\n",
+    "headAns = insert_at_head(1000,newHead)\n",
+    "#pLL(ans)\n",
+    "tailAns = insert_at_tail(100000,headAns)\n",
+    "ins_index = insert_at_an_index(tailAns,6,250)\n",
+    "pLL(ins_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
