--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -488,6 +488,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10-->20-->30-->40-->50-->60-->\n",
+      " After deleting...\n",
+      "20-->30-->40-->50-->60-->"
+     ]
+    }
+   ],
+   "source": [
+    "## Delete a head node\n",
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    while(head!=None):\n",
+    "        print(head.d,end=\"-->\")\n",
+    "        head=head.next\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "def delete_head_node(head):\n",
+    "    head=head.next\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "pLL(newHead)\n",
+    "del_node = delete_head_node(newHead)\n",
+    "print(\"\\n After deleting...\")\n",
+    "pLL(del_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-->2-->3-->4-->5-->6-->\n",
+      " After deleting...\n",
+      "1-->2-->3-->4-->5-->"
+     ]
+    }
+   ],
+   "source": [
+    "## Deleting a tail node\n",
+    "\n",
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    temp3=head\n",
+    "    while(temp3!=None):\n",
+    "        print(temp3.d,end=\"-->\")\n",
+    "        temp3=temp3.next\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "def delete_tail_node(head):\n",
+    "    temp = head\n",
+    "    LLength=1\n",
+    "    while(temp.next!=None):\n",
+    "        LLength = LLength+1\n",
+    "        temp = temp.next\n",
+    "    count =1\n",
+    "    temp2=head\n",
+    "    while(count<LLength-1):\n",
+    "        temp2 = temp2.next\n",
+    "        count = count+1\n",
+    "    temp2.next = None\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip()\n",
+    "pLL(newHead)\n",
+    "del_node = delete_tail_node(newHead)\n",
+    "print(\"\\n After deleting...\")\n",
+    "pLL(del_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
