--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -537,16 +537,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-->2-->3-->4-->5-->6-->\n",
-      " After deleting...\n",
-      "1-->2-->3-->4-->5-->"
+      "1-->\n",
+      " After deleting...\n"
      ]
     }
    ],
@@ -577,6 +576,8 @@
     "        val = int(input())\n",
     "    return head\n",
     "def delete_tail_node(head):\n",
+    "    if head is None or head.next is None:  \n",
+    "        return None\n",
     "    temp = head\n",
     "    LLength=1\n",
     "    while(temp.next!=None):\n",
@@ -593,6 +594,82 @@
     "newHead = take_ip()\n",
     "pLL(newHead)\n",
     "del_node = delete_tail_node(newHead)\n",
+    "print(\"\\n After deleting...\")\n",
+    "pLL(del_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-->2-->3-->4-->5-->6-->7-->8-->9-->5-->6-->7-->8-->9-->\n",
+      " Printing temp3 ......\n",
+      "\n",
+      " Printing temp4 ......\n",
+      "6-->7-->8-->9-->\n",
+      " After deleting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Delete a given node \n",
+    "\n",
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    temp3=head\n",
+    "    while(temp3!=None):\n",
+    "        print(temp3.d,end=\"-->\")\n",
+    "        temp3=temp3.next\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "def delete_node_at_index(index,head):\n",
+    "    if head is None or head.next is None:  \n",
+    "        return None\n",
+    "    count =1\n",
+    "    temp2=head\n",
+    "    \n",
+    "    while(count<index):\n",
+    "        temp2 = temp2.next\n",
+    "        count = count+1\n",
+    "    temp3 = temp2.next\n",
+    "    temp4 = temp3.next\n",
+    "    while(temp3!=None):\n",
+    "        print(temp3.d,end=\"-->\")\n",
+    "        temp3=temp3.next\n",
+    "    print(\"\\n Printing temp3 ......\")\n",
+    "    while(temp3!=None):\n",
+    "        print(temp3.d,end=\"-->\")\n",
+    "        temp3=temp3.next\n",
+    "    print(\"\\n Printing temp4 ......\")\n",
+    "    while(temp4!=None):\n",
+    "        print(temp4.d,end=\"-->\")\n",
+    "        temp4=temp4.next\n",
+    "    \n",
+    "    return temp4\n",
+    "\n",
+    "newHead = take_ip()\n",
+    "pLL(newHead)\n",
+    "del_node = delete_node_at_index(4,newHead)\n",
     "print(\"\\n After deleting...\")\n",
     "pLL(del_node)"
    ]
