--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -600,19 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-->2-->3-->4-->5-->6-->7-->8-->9-->5-->6-->7-->8-->9-->\n",
-      " Printing temp3 ......\n",
-      "\n",
-      " Printing temp4 ......\n",
-      "6-->7-->8-->9-->\n",
-      " After deleting...\n"
+      "10-->20-->30-->40-->50-->60-->\n",
+      " After deletion....\n",
+      "10-->20-->30-->50-->60-->"
      ]
     }
    ],
@@ -624,10 +621,10 @@
     "        self.d = val\n",
     "        self.next = None\n",
     "def pLL(head):\n",
-    "    temp3=head\n",
-    "    while(temp3!=None):\n",
-    "        print(temp3.d,end=\"-->\")\n",
-    "        temp3=temp3.next\n",
+    "    temp5=head\n",
+    "    while(temp5!=None):\n",
+    "        print(temp5.d,end=\"-->\")\n",
+    "        temp5=temp5.next\n",
     "def take_ip():\n",
     "    val = int(input())\n",
     "    head=None\n",
@@ -642,35 +639,37 @@
     "            temp.next = nNode\n",
     "        val = int(input())\n",
     "    return head\n",
-    "def delete_node_at_index(index,head):\n",
-    "    if head is None or head.next is None:  \n",
+    "def delete_node_at_index(index, head):\n",
+    "    if head is None:\n",
     "        return None\n",
-    "    count =1\n",
-    "    temp2=head\n",
-    "    \n",
-    "    while(count<index):\n",
+    "    if index == 0:\n",
+    "        return head.next  \n",
+    "    count = 1\n",
+    "    temp2 = head\n",
+    "    while count < index and temp2.next is not None:\n",
     "        temp2 = temp2.next\n",
-    "        count = count+1\n",
-    "    temp3 = temp2.next\n",
-    "    temp4 = temp3.next\n",
-    "    while(temp3!=None):\n",
-    "        print(temp3.d,end=\"-->\")\n",
-    "        temp3=temp3.next\n",
-    "    print(\"\\n Printing temp3 ......\")\n",
-    "    while(temp3!=None):\n",
-    "        print(temp3.d,end=\"-->\")\n",
-    "        temp3=temp3.next\n",
-    "    print(\"\\n Printing temp4 ......\")\n",
-    "    while(temp4!=None):\n",
-    "        print(temp4.d,end=\"-->\")\n",
-    "        temp4=temp4.next\n",
-    "    \n",
-    "    return temp4\n",
+    "        count += 1\n",
+    "    if temp2.next is None:\n",
+    "        print(\"Index out of range.\")\n",
+    "        return head  \n",
+    "    temp3 = temp2.next \n",
+    "    if temp3 is None: \n",
+    "        return head\n",
+    "    temp2.next = temp3.next\n",
+    "    '''\n",
+    "    print(\"\\nPrinting temp3 (Deleted Node and its successors)......\")\n",
+    "    while temp3 is not None:\n",
+    "        print(temp3.d, end=\"-->\")\n",
+    "        temp3 = temp3.next\n",
+    "    print(\"None\")\n",
+    "    '''\n",
+    "    return head \n",
+    "\n",
     "\n",
     "newHead = take_ip()\n",
     "pLL(newHead)\n",
-    "del_node = delete_node_at_index(4,newHead)\n",
-    "print(\"\\n After deleting...\")\n",
+    "del_node = delete_node_at_index(3,newHead)\n",
+    "print(\"\\n After deletion....\")\n",
     "pLL(del_node)"
    ]
   },
