--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -656,16 +656,7 @@
     "    if temp3 is None: \n",
     "        return head\n",
     "    temp2.next = temp3.next\n",
-    "    '''\n",
-    "    print(\"\\nPrinting temp3 (Deleted Node and its successors)......\")\n",
-    "    while temp3 is not None:\n",
-    "        print(temp3.d, end=\"-->\")\n",
-    "        temp3 = temp3.next\n",
-    "    print(\"None\")\n",
-    "    '''\n",
     "    return head \n",
-    "\n",
-    "\n",
     "newHead = take_ip()\n",
     "pLL(newHead)\n",
     "del_node = delete_node_at_index(3,newHead)\n",
@@ -678,7 +669,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Delete a node by value\n",
+    "\n",
+    "## Delete a given node \n",
+    "\n",
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    temp5=head\n",
+    "    while(temp5!=None):\n",
+    "        print(temp5.d,end=\"-->\")\n",
+    "        temp5=temp5.next\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "def delete_node_at_index(index, head):\n",
+    "    if head is None:\n",
+    "        return None\n",
+    "    if index == 0:\n",
+    "        return head.next  \n",
+    "    count = 1\n",
+    "    temp2 = head\n",
+    "    while count < index and temp2.next is not None:\n",
+    "        temp2 = temp2.next\n",
+    "        count += 1\n",
+    "    if temp2.next is None:\n",
+    "        print(\"Index out of range.\")\n",
+    "        return head  \n",
+    "    temp3 = temp2.next \n",
+    "    if temp3 is None: \n",
+    "        return head\n",
+    "    temp2.next = temp3.next\n",
+    "    return head \n",
+    "newHead = take_ip()\n",
+    "pLL(newHead)\n",
+    "del_node = delete_node_at_index(30,newHead)\n",
+    "print(\"\\n After deletion....\")\n",
+    "pLL(del_node)"
+   ]
   }
  ],
  "metadata": {
