--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -666,14 +666,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-->2-->3-->4-->5-->6-->7-->8-->9-->\n",
+      " After deletion....\n"
+     ]
+    }
+   ],
    "source": [
     "## Delete a node by value\n",
-    "\n",
-    "## Delete a given node \n",
-    "\n",
     "class SLL:\n",
     "    def __init__(self,val):\n",
     "        self.d = val\n",
@@ -697,30 +703,30 @@
     "            temp.next = nNode\n",
     "        val = int(input())\n",
     "    return head\n",
-    "def delete_node_at_index(index, head):\n",
+    "def delete_node_at_index(value,head):\n",
     "    if head is None:\n",
     "        return None\n",
-    "    if index == 0:\n",
-    "        return head.next  \n",
-    "    count = 1\n",
-    "    temp2 = head\n",
-    "    while count < index and temp2.next is not None:\n",
-    "        temp2 = temp2.next\n",
-    "        count += 1\n",
-    "    if temp2.next is None:\n",
-    "        print(\"Index out of range.\")\n",
-    "        return head  \n",
-    "    temp3 = temp2.next \n",
-    "    if temp3 is None: \n",
-    "        return head\n",
-    "    temp2.next = temp3.next\n",
-    "    return head \n",
+    "    temp=head\n",
+    "    while (temp!=None):\n",
+    "        if temp.d == value:\n",
+    "            temp2=temp.next\n",
+    "            temp.next = temp2.next\n",
+    "        temp=temp.next\n",
+    "    return temp\n",
+    "    \n",
     "newHead = take_ip()\n",
     "pLL(newHead)\n",
-    "del_node = delete_node_at_index(30,newHead)\n",
+    "del_node = delete_node_at_index(3,newHead)\n",
     "print(\"\\n After deletion....\")\n",
     "pLL(del_node)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
