--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -666,15 +666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-->2-->3-->4-->5-->6-->7-->8-->9-->\n",
-      " After deletion....\n"
+      "1-->2-->3-->4-->5-->2-->4-->2-->6-->\n",
+      " After deletion....\n",
+      "1-->3-->4-->5-->4-->6-->"
      ]
     }
    ],
@@ -707,18 +708,65 @@
     "    if head is None:\n",
     "        return None\n",
     "    temp=head\n",
-    "    while (temp!=None):\n",
-    "        if temp.d == value:\n",
-    "            temp2=temp.next\n",
-    "            temp.next = temp2.next\n",
+    "    while (temp.next!=None):\n",
+    "        if temp.next.d == value:\n",
+    "            temp.next = temp.next.next\n",
+    "            #return head\n",
     "        temp=temp.next\n",
-    "    return temp\n",
+    "    return head\n",
     "    \n",
     "newHead = take_ip()\n",
     "pLL(newHead)\n",
-    "del_node = delete_node_at_index(3,newHead)\n",
+    "del_node = delete_node_at_index(2,newHead)\n",
     "print(\"\\n After deletion....\")\n",
     "pLL(del_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  5  6  7  "
+     ]
+    }
+   ],
+   "source": [
+    "## Linked List all operations\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): # Change here to print the last node\n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: # Traverse to the last node\n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) # Create new node after traversal\n",
+    "            temp.next = newNode # Establish connection\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)"
    ]
   },
   {
