--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -724,14 +724,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1  2  3  4  5  6  7  "
+      "1  2  3  4  5  6  \n",
+      " Inserting at head....\n",
+      "10  1  2  3  4  5  6  \n",
+      " Inserting at tail....\n",
+      "10  1  2  3  4  5  6  20  \n",
+      " Inserting at an index....\n",
+      "1  2  3  30  4  5  6  20  \n",
+      " Deleting head node....\n",
+      "1  2  3  30  4  5  6  20  \n",
+      " Deleting tail node....\n",
+      "1  2  3  30  4  5  6  \n",
+      " Deleting at an index....\n",
+      "1  2  30  4  5  6  "
      ]
     }
    ],
@@ -748,7 +760,71 @@
     "    while(temp!=None): # Change here to print the last node\n",
     "        print(temp.d,end=\"  \")\n",
     "        temp=temp.next\n",
-    "\n",
+    "def insert_at_head(data,head):\n",
+    "    if head == None:\n",
+    "        newNode = LL(data)\n",
+    "        head = newNode\n",
+    "        return head\n",
+    "    newNode = LL(data)\n",
+    "    newNode.next = head\n",
+    "    return newNode\n",
+    "def insert_at_tail(data,head):\n",
+    "    temp=head\n",
+    "    while temp.next!=None:\n",
+    "        temp=temp.next\n",
+    "    newNode = LL(data)\n",
+    "    temp.next = newNode\n",
+    "    return head\n",
+    "def insert_at_an_index(data,index,head):\n",
+    "    if head==None:\n",
+    "        newNode = LL(data)\n",
+    "        head = newNode\n",
+    "        return head\n",
+    "    temp=head\n",
+    "    count=0\n",
+    "    while count<index:\n",
+    "        temp=temp.next\n",
+    "        count=count+1\n",
+    "    temp2=temp.next\n",
+    "    newNode = LL(data)\n",
+    "    newNode.next = temp2\n",
+    "    temp.next = newNode\n",
+    "    return head\n",
+    "def delete_at_head_node(head):\n",
+    "    if head==None:\n",
+    "        return None\n",
+    "    temp=head\n",
+    "    temp=temp.next\n",
+    "    return head\n",
+    "def delete_at_tail_node(head):\n",
+    "    if head is None or head.next is None:  \n",
+    "        return None\n",
+    "    temp = head\n",
+    "    LLength=1\n",
+    "    while(temp.next!=None):\n",
+    "        LLength = LLength+1\n",
+    "        temp = temp.next\n",
+    "    count =1\n",
+    "    temp2=head\n",
+    "    while(count<LLength-1):\n",
+    "        temp2 = temp2.next\n",
+    "        count = count+1\n",
+    "    temp2.next = None\n",
+    "    return head\n",
+    "def delete_at_an_index(index,head):\n",
+    "    if head==None:\n",
+    "        return None\n",
+    "    if index == 0:\n",
+    "        head=head.next\n",
+    "        return head\n",
+    "    temp=head\n",
+    "    count =0\n",
+    "    while(count<index):\n",
+    "        temp=temp.next\n",
+    "        count =count+1\n",
+    "    temp2=temp.next\n",
+    "    temp.next = temp2.next\n",
+    "    return head\n",
     "def take_ip():\n",
     "    v = int(input(\"Enter a value\"))\n",
     "    head=None\n",
@@ -766,7 +842,172 @@
     "    return head\n",
     "\n",
     "newHead = take_ip() \n",
-    "print_LL(newHead)"
+    "print_LL(newHead)\n",
+    "print(\"\\n Inserting at head....\")\n",
+    "newHead1 = insert_at_head(10,newHead)\n",
+    "print_LL(newHead1)\n",
+    "print(\"\\n Inserting at tail....\")\n",
+    "newHead2 = insert_at_tail(20,newHead1)\n",
+    "print_LL(newHead2)\n",
+    "print(\"\\n Inserting at an index....\")\n",
+    "newHead3 = insert_at_an_index(30,2,newHead)\n",
+    "print_LL(newHead3)\n",
+    "print(\"\\n Deleting head node....\")\n",
+    "newHead4 = delete_at_head_node(newHead3)\n",
+    "print_LL(newHead4)\n",
+    "print(\"\\n Deleting tail node....\")\n",
+    "newHead5 = delete_at_tail_node(newHead4)\n",
+    "print_LL(newHead5)\n",
+    "print(\"\\n Deleting at an index....\")\n",
+    "newHead6 = delete_at_an_index(1,newHead5)\n",
+    "print_LL(newHead6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  5  6  Count =  6\n",
+      "Mid =  3\n",
+      "C =  3\n",
+      "Mid value =  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Linked List middle value\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "    return head\n",
+    "def get_mid_list_value(head):\n",
+    "    temp=head\n",
+    "    count=0\n",
+    "    while(temp!=None):\n",
+    "        count=count+1\n",
+    "        temp=temp.next\n",
+    "    print(\"Count = \",count)\n",
+    "    mid = count//2\n",
+    "    print(\"Mid = \",mid)\n",
+    "    c=0\n",
+    "    temp1=head\n",
+    "    while(c<mid):\n",
+    "        temp1=temp1.next\n",
+    "        c=c+1\n",
+    "    print(\"C = \",c)\n",
+    "    return temp1.d\n",
+    "\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "ans = get_mid_list_value(newHead)\n",
+    "print(\"Mid value = \",ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4  2  1  3  \n",
+      "\n",
+      "[1, 2, 3, 4]\n",
+      "1  2  3  4  "
+     ]
+    }
+   ],
+   "source": [
+    "## Sorting a linked list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "    \n",
+    "def convert_linked_list_into_sortedlist(head):\n",
+    "    lst=[]\n",
+    "    temp=head\n",
+    "    while(temp!=None):\n",
+    "        lst.append(temp.d)\n",
+    "        temp=temp.next\n",
+    "    return sorted(lst)\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "def converting_sorted_list_into_linked_list(lst):\n",
+    "    head=None\n",
+    "    for val in range(len(lst)):\n",
+    "            if head == None:\n",
+    "               newNode = LL(lst[val])\n",
+    "               head = newNode\n",
+    "            else:\n",
+    "                temp = head \n",
+    "                while temp.next!=None: \n",
+    "                   temp=temp.next\n",
+    "                newNode = LL(lst[val])\n",
+    "                temp.next = newNode \n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "ans= convert_linked_list_into_sortedlist(newHead)\n",
+    "print(\"\\n\")\n",
+    "print(ans)\n",
+    "ll = converting_sorted_list_into_linked_list(ans)\n",
+    "print_LL(ll)\n"
    ]
   },
   {
@@ -774,7 +1015,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 148. Sort List\n",
+    "\n",
+    "## Sorting a linked list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "    \n",
+    "def convert_linked_list_into_sortedlist(head):\n",
+    "    lst=[]\n",
+    "    temp=head\n",
+    "    while(temp!=None):\n",
+    "        lst.append(temp.d)\n",
+    "        temp=temp.next\n",
+    "    return sorted(lst)\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "def converting_sorted_list_into_linked_list(lst):\n",
+    "    head=None\n",
+    "    for val in range(len(lst)):\n",
+    "            if head == None:\n",
+    "               newNode = LL(lst[val])\n",
+    "               head = newNode\n",
+    "            else:\n",
+    "                temp = head \n",
+    "                while temp.next!=None: \n",
+    "                   temp=temp.next\n",
+    "                newNode = LL(lst[val])\n",
+    "                temp.next = newNode \n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "ans= convert_linked_list_into_sortedlist(newHead)\n",
+    "print(\"\\n\")\n",
+    "print(ans)\n",
+    "ll = converting_sorted_list_into_linked_list(ans)\n",
+    "print_LL(ll)\n"
+   ]
   }
  ],
  "metadata": {
