--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1139,6 +1139,505 @@
     "        return lst_final[-1]\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Contains Duplicate\n",
+    "\n",
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: List[int]) -> bool:\n",
+    "        return len(set(nums))!=len(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Happy number\n",
+    "\n",
+    "def isHappy(n):\n",
+    "    if n>=1 and n<10:\n",
+    "        if n==1 or n==7:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    m=0\n",
+    "    for i in str(n):\n",
+    "       m= m+int(i)**2\n",
+    "    return isHappy(m)\n",
+    "print(isHappy(7))\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(19%10)**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=0\n",
+    "for i in str(199):\n",
+    "    n= n+int(i)**2\n",
+    "print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m[i][k]= 0\n",
+      "m[i][k]= 0\n",
+      "m[i][k]= 0\n",
+      "m[j][n]= 0\n",
+      "m[j][n]= 0\n",
+      "m[j][n]= 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0], [1, 1, 1], [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Set to zeroes\n",
+    "\n",
+    "m=[[0,1,1],\n",
+    "   [1,1,1],\n",
+    "   [1,1,1]]\n",
+    "\n",
+    "for i in range(len(m)):\n",
+    "    for j in range(len(m)):\n",
+    "        if m[i][j]==0:\n",
+    "            for k in range(len(m[0])):\n",
+    "                m[i][k]=0\n",
+    "                print(\"m[i][k]=\",m[i][k])\n",
+    "            for n in range(len(m)):\n",
+    "                m[j][n]=0\n",
+    "                print(\"m[j][n]=\",m[j][n])\n",
+    "        break\n",
+    "m\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1], [0, 0, 0], [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J is running.. 0\n",
+      "J value =  0\n",
+      "J is running.. 1\n",
+      "J value =  1\n",
+      "J is running.. 2\n",
+      "J value =  2\n",
+      "J is running.. 0\n",
+      "J value =  0\n",
+      "J is running.. 1\n",
+      "Entered into m[i][j]...\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 1], [1, 1, 1]]\n",
+      "0\n",
+      "After j updation [[1, 1, 1], [0, 0, 1], [1, 1, 1]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 1], [1, 1, 1]]\n",
+      "0\n",
+      "After j updation [[1, 1, 1], [0, 0, 1], [1, 1, 1]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 0], [1, 1, 1]]\n",
+      "0\n",
+      "After j updation [[1, 1, 1], [0, 0, 0], [1, 1, 1]]\n",
+      "J value =  1\n",
+      "J is running.. 2\n",
+      "Entered into m[i][j]...\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 0], [1, 1, 1]]\n",
+      "0\n",
+      "After j updation [[1, 1, 1], [0, 0, 0], [0, 1, 1]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 0], [0, 1, 1]]\n",
+      "0\n",
+      "After j updation [[1, 1, 1], [0, 0, 0], [0, 0, 1]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 0], [0, 0, 1]]\n",
+      "0\n",
+      "After j updation [[1, 1, 1], [0, 0, 0], [0, 0, 0]]\n",
+      "J value =  2\n",
+      "J is running.. 0\n",
+      "Entered into m[i][j]...\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[1, 1, 1], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 1, 1], [0, 0, 0], [0, 0, 0]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 1, 1], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 1], [0, 0, 0], [0, 0, 0]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 1], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "J value =  0\n",
+      "J is running.. 1\n",
+      "Entered into m[i][j]...\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "J value =  1\n",
+      "J is running.. 2\n",
+      "Entered into m[i][j]...\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "Entered into k loop...\n",
+      "0\n",
+      "After i updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "0\n",
+      "After j updation [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+      "J value =  2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0], [0, 0, 0], [0, 0, 0]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Set to zeroes\n",
+    "\n",
+    "m=[[1,1,1],\n",
+    "   [1,0,1],\n",
+    "   [1,1,1]]\n",
+    "\n",
+    "for i in range(len(m)):\n",
+    "    for j in range(len(m)):\n",
+    "        print(\"J is running..\",j)\n",
+    "        if m[i][j]==0:\n",
+    "            print(\"Entered into m[i][j]...\")\n",
+    "            for k in range(len(m[0])):\n",
+    "                print(\"Entered into k loop...\")\n",
+    "                m[i][k]=0\n",
+    "                print(m[i][k])\n",
+    "                print(\"After i updation\",m)\n",
+    "                m[j][k] =0\n",
+    "                print(m[j][k])\n",
+    "                print(\"After j updation\",m)\n",
+    "        print(\"J value = \",j)\n",
+    "                #m[j][k]=0       \n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = [[1, 1, 1],\n",
+    "     [1, 0, 1],\n",
+    "     [1, 1, 1]]\n",
+    "\n",
+    "for i in range(len(m)):\n",
+    "    for j in range(len(m[0])): \n",
+    "        if m[i][j] == 0:\n",
+    "            for k in range(len(m[0])):  \n",
+    "                m[i][k] = 0\n",
+    "            for k in range(len(m)):  \n",
+    "                m[k][j] = 0\n",
+    "for row in m:\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n",
+      "[0, 1, 0]\n",
+      "[0, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = [[0, 1, 0],\n",
+    "     [1, 1, 1],\n",
+    "     [1, 1, 1]]\n",
+    "\n",
+    "rows = len(m)\n",
+    "cols = len(m[0])\n",
+    "row_zeroes = set()\n",
+    "col_zeroes = set()\n",
+    "\n",
+    "for i in range(rows):\n",
+    "    for j in range(cols):\n",
+    "        if m[i][j] == 0:\n",
+    "            row_zeroes.add(i)\n",
+    "            col_zeroes.add(j)\n",
+    "for i in row_zeroes:\n",
+    "    for j in range(cols):\n",
+    "        m[i][j] = 0\n",
+    "\n",
+    "for j in col_zeroes:\n",
+    "    for i in range(rows):\n",
+    "        m[i][j] = 0\n",
+    "for row in m:\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Best Time to Buy and Sell Stock II\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxProfit(self,prices):\n",
+    "        sum=0\n",
+    "        for i in range(len(prices)-1):\n",
+    "            if prices[i+1]>prices[i]:\n",
+    "                sum=sum+(prices[i+1]-prices[i])\n",
+    "        return sum\n",
+    "\n",
+    "s=Solution()\n",
+    "ans=s.maxProfit([87, 42, 56, 78, 4, 26, 93, 10, 64, 35, 85, 50, 97, 11, 76, 100])\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Two sum -|| Input array is sorted\n",
+    "def twoSum( numbers, target):\n",
+    "        index=[]\n",
+    "        for i in range(len(numbers)):\n",
+    "            for j in range(i+1,len(numbers)):\n",
+    "                sum = numbers[i]+numbers[j]\n",
+    "                if (sum)==target:\n",
+    "                    index.append(i+1)\n",
+    "                    index.append(j+1)\n",
+    "                    break\n",
+    "        return index\n",
+    "print(twoSum([2,3,4],6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Merge two sorted lists\n",
+    "class Solution:\n",
+    "    def mergeTwoLists(self, list1: Optional[ListNode], list2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        def convert_into_lists_and_mix_into_one(list1,list2):\n",
+    "            final_list = []\n",
+    "            temp=list1\n",
+    "            while(temp!=None):\n",
+    "                final_list.append(temp.val)\n",
+    "                temp=temp.next\n",
+    "            temp1=list2\n",
+    "            while(temp1!=None):\n",
+    "                final_list.append(temp1.val)\n",
+    "                temp1=temp1.next\n",
+    "            return sorted(final_list)\n",
+    "        final_lst = convert_into_lists_and_mix_into_one(list1,list2)\n",
+    "        def convert_to_linked_list(lst):\n",
+    "            dummy = ListNode(0)\n",
+    "            tail = dummy\n",
+    "            for val in lst:\n",
+    "                tail.next = ListNode(val)\n",
+    "                tail = tail.next\n",
+    "            \n",
+    "            return dummy.next\n",
+    "        ans= convert_to_linked_list(final_lst)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Reverse Linked List II\n",
+    "\n",
+    "class Solution:\n",
+    "    def reverseBetween(self, head: Optional[ListNode], left: int, right: int) -> Optional[ListNode]:\n",
+    "        def convert_linked_list_into_list_and_reverse(lt,rt,head):\n",
+    "            left = lt-1\n",
+    "            right= rt-1\n",
+    "            lst=[]\n",
+    "            temp=head\n",
+    "            while(temp!=None):\n",
+    "                lst.append(temp.d)\n",
+    "                temp=temp.next\n",
+    "            while left<right:\n",
+    "                temp = lst[left]\n",
+    "                lst[left] = lst[right]\n",
+    "                lst[right] = temp\n",
+    "                left=left+1\n",
+    "                right=right-1\n",
+    "            return lst\n",
+    "        llst = convert_linked_list_into_list_and_reverse(left,right,head)\n",
+    "        def convert_to_linked_list(lst):\n",
+    "            dummy = ListNode(0)\n",
+    "            tail = dummy\n",
+    "            for val in lst:\n",
+    "                tail.next = ListNode(val)\n",
+    "                tail = tail.next\n",
+    "            \n",
+    "            return dummy.next\n",
+    "        ans = convert_to_linked_list(llst)\n",
+    "        return ans\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
