--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1077,6 +1077,78 @@
     "ll = converting_sorted_list_into_linked_list(ans)\n",
     "print_LL(ll)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Find the Node Index in Linked List\n",
+    "\n",
+    "## Sorting a linked list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "def find_index(head, k):\n",
+    "    temp=head\n",
+    "    index=-1\n",
+    "    count =-1\n",
+    "    while(temp!=None):\n",
+    "        count=count+1\n",
+    "        if temp.d == k:\n",
+    "            index=count\n",
+    "            break\n",
+    "        temp=temp.next\n",
+    "    return index\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "ans= find_index(newHead, 5)\n",
+    "print(\"\\n\")\n",
+    "print(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
