--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1095,8 +1095,6 @@
    ],
    "source": [
     "## Find the Node Index in Linked List\n",
-    "\n",
-    "## Sorting a linked list\n",
     "\n",
     "class LL:\n",
     "    def __init__(self,data):\n",
@@ -1141,6 +1139,77 @@
     "ans= find_index(newHead, 5)\n",
     "print(\"\\n\")\n",
     "print(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  5  6  middle 3\n",
+      "\n",
+      "\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Find middle of tye linkedlist\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "class ListNode:\n",
+    "    def __init__(self, d):\n",
+    "        self.d = d\n",
+    "        self.next = None\n",
+    "\n",
+    "def find_index(head):\n",
+    "    temp = head\n",
+    "    count = 0\n",
+    "    while temp is not None:\n",
+    "        count += 1\n",
+    "        temp = temp.next\n",
+    "    middle_index = count // 2\n",
+    "    temp = head\n",
+    "    for i in range(middle_index):\n",
+    "        temp = temp.next\n",
+    "\n",
+    "    return temp.d \n",
+    "\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "ans= find_index(newHead)\n",
+    "print(\"\\n\")\n",
+    "print(ans)"
    ]
   },
   {
