--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1216,8 +1216,199 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  \n",
+      "\n",
+      "1  2  3  4  "
+     ]
+    }
+   ],
+   "source": [
+    "# Removing the element\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"  \")\n",
+    "        temp=temp.next\n",
+    "\n",
+    "def remove_elements(head, val):\n",
+    "    temp = head\n",
+    "    if head is None or head.d == val:\n",
+    "        return None\n",
+    "    while temp is not None and temp.next is not None:\n",
+    "        if temp.next.d == val:\n",
+    "            temp.next = temp.next.next\n",
+    "        else:\n",
+    "            temp=temp.next\n",
+    "    return head\n",
+    "\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "val = int(input(\"Enter a value to delete \"))\n",
+    "ans= remove_elements(newHead, val)\n",
+    "print(\"\\n\")\n",
+    "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1  2  3  3  2  4  5  4  6  \n",
+      "Linked List after Removing Duplicates:\n",
+      "1  2  3  4  5  6  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove Duplicate Elements from Linked List\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d=data\n",
+    "        self.next=None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while(temp!=None): \n",
+    "        print(temp.d,end=\"-->\")\n",
+    "        temp=temp.next\n",
+    "\n",
+    "def remove_duplicate_elements(head):\n",
+    "    temp = head\n",
+    "    if head is None:\n",
+    "        return None\n",
+    "    temp1=head\n",
+    "    while temp is not None and temp.next is not None:\n",
+    "        val = temp.d\n",
+    "        print(\"Checking for condition....\")\n",
+    "        while temp1 is not None and temp1.next is not None:\n",
+    "            if val == temp1.d:\n",
+    "                print(\"Matched....\")\n",
+    "                temp.next = temp.next.next\n",
+    "            else:\n",
+    "                temp1=temp1.next\n",
+    "        temp =temp.next\n",
+    "    return head\n",
+    "\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value\"))\n",
+    "    head=None\n",
+    "    while(v!=-1):\n",
+    "        if head == None:\n",
+    "            newNode = LL(v)\n",
+    "            head = newNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while temp.next!=None: \n",
+    "                temp=temp.next\n",
+    "            newNode = LL(v) \n",
+    "            temp.next = newNode \n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip() \n",
+    "print_LL(newHead)\n",
+    "print(\"\\n\")\n",
+    "ans= remove_duplicate_elements(newHead)\n",
+    "print(\"\\n\")\n",
+    "print_LL(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "def remove_duplicate_elements(head):\n",
+    "    temp = head\n",
+    "\n",
+    "    if head is None:\n",
+    "        return None\n",
+    "\n",
+    "    while temp is not None:\n",
+    "        val = temp.d\n",
+    "        temp1 = temp\n",
+    "\n",
+    "        while temp1 is not None and temp1.next is not None:\n",
+    "            if temp1.next.d == val: \n",
+    "                temp1.next = temp1.next.next\n",
+    "            else:\n",
+    "                temp1 = temp1.next \n",
+    "        \n",
+    "        temp = temp.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "# Example Test\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = remove_duplicate_elements(newHead)\n",
+    "print(\"Linked List after Removing Duplicates:\")\n",
+    "print_LL(ans)\n"
+   ]
   }
  ],
  "metadata": {
