--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1638,6 +1638,145 @@
     "        return ans\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add Two Numbers\n",
+    "\n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        def convert_linked_list_into_list_and_add(l1,l2):\n",
+    "            left = 0\n",
+    "            right= len(l1)-1\n",
+    "            final_lst=[]\n",
+    "            lst1=[]\n",
+    "            lst2=[]\n",
+    "            temp=l1\n",
+    "            temp1=l2\n",
+    "            while(temp!=None):\n",
+    "                lst1.append(temp.val)\n",
+    "                temp=temp.next\n",
+    "            while(temp1!=None):\n",
+    "                lst2.append(temp1.val)\n",
+    "                temp1=temp1.next\n",
+    "            while left<=right:\n",
+    "                sum = lst1[left]+lst2[left]\n",
+    "                final_lst.append(sum)\n",
+    "                left=left+1\n",
+    "            return lst\n",
+    "        llst = convert_linked_list_into_list_and_add(l1,l2)\n",
+    "        def convert_to_linked_list(lst):\n",
+    "            dummy = ListNode(0)\n",
+    "            tail = dummy\n",
+    "            for val in lst:\n",
+    "                tail.next = ListNode(val)\n",
+    "                tail = tail.next\n",
+    "            \n",
+    "            return dummy.next\n",
+    "        ans = convert_to_linked_list(llst)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_linked_list_into_list_and_add(l1,l2):\n",
+    "            left = 0\n",
+    "            right= len(l1)-1\n",
+    "            final_lst=[]\n",
+    "            lst1=[]\n",
+    "            lst2=[]\n",
+    "            temp=l1\n",
+    "            temp1=l2\n",
+    "            while(temp!=None):\n",
+    "                lst1.append(temp.val)\n",
+    "                temp=temp.next\n",
+    "            while(temp1!=None):\n",
+    "                lst2.append(temp1.val)\n",
+    "                temp1=temp1.next\n",
+    "            while left<=right:\n",
+    "                sum = lst1[left]+lst2[left]\n",
+    "                final_lst.append(sum)\n",
+    "                left=left+1\n",
+    "            return lst\n",
+    "        llst = convert_linked_list_into_list_and_add(l1,l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000998"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st1 = str(9999999)\n",
+    "str2 = str(999)\n",
+    "\n",
+    "add = int(st1)+int(str2)\n",
+    "add\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add two numbers\n",
+    "\n",
+    "\n",
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, val=0, next=None):\n",
+    "#         self.val = val\n",
+    "#         self.next = next\n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        str1 = \"\"\n",
+    "        str2 = \"\"\n",
+    "        while l1 is not None:\n",
+    "            str1 = str1 + str(l1.val) \n",
+    "            l1 = l1.next\n",
+    "        while l2 is not None:\n",
+    "            str2 = str2 + str(l2.val) \n",
+    "            l2 = l2.next\n",
+    "        str1 = str1[::-1]\n",
+    "        str2 = str2[::-1]\n",
+    "        added_val = str(int(str1) + int(str2))\n",
+    "\n",
+    "        lst = [int(i) for i in added_val]\n",
+    "        lst=lst[::-1]\n",
+    "\n",
+    "        def convert_to_linked_list(lst):\n",
+    "            dummy = ListNode(0)\n",
+    "            tail = dummy\n",
+    "            for val in lst:\n",
+    "                tail.next = ListNode(val)\n",
+    "                tail = tail.next\n",
+    "\n",
+    "            return dummy.next\n",
+    "\n",
+    "        ans = convert_to_linked_list(lst)\n",
+    "        return ans"
+   ]
   }
  ],
  "metadata": {
