--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1777,6 +1777,26 @@
     "        ans = convert_to_linked_list(lst)\n",
     "        return ans"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Linked list cycle\n",
+    "\n",
+    "slow, fast = head, head \n",
+    "    \n",
+    "    while fast and fast.next:\n",
+    "        slow = slow.next  \n",
+    "        fast = fast.next.next \n",
+    "        \n",
+    "        if slow == fast: \n",
+    "            return True\n",
+    "    \n",
+    "    return False"
+   ]
   }
  ],
  "metadata": {
