--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1621,7 +1621,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Linked list cycle\n",
+    "\n",
+    "def has_cycle(head):\n",
+    "    slow, fast = head, head \n",
+    "    \n",
+    "    while fast and fast.next:\n",
+    "        slow = slow.next  \n",
+    "        fast = fast.next.next \n",
+    "        \n",
+    "        if slow == fast: \n",
+    "            return True\n",
+    "    \n",
+    "    return False "
+   ]
   }
  ],
  "metadata": {
