--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1647,8 +1647,8 @@
      "output_type": "stream",
      "text": [
       "Original Linked List:\n",
-      "1-->5-->4-->7-->3-->\n",
-      "1-->3-->4-->5-->7-->\n"
+      "4-->3-->5-->6-->2-->\n",
+      "2-->3-->4-->5-->6-->\n"
      ]
     }
    ],
@@ -1719,6 +1719,60 @@
     "print_LL(newHead)\n",
     "ans = merge_sort(newHead)\n",
     "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-->2-->3-->4-->5-->6-->1-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Single circular linked list\n",
+    "\n",
+    "class SCLL:\n",
+    "    def __init__(self,data):\n",
+    "        self.d= data\n",
+    "        self.next = None\n",
+    "def print_LL(head,count):\n",
+    "    temp = head\n",
+    "    c=count+1\n",
+    "    for i in range(c):\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "count =0\n",
+    "def take_input():\n",
+    "    global count\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        count=count+1\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    if head is not None:\n",
+    "        temp=head\n",
+    "        while temp.next!=None:\n",
+    "            temp=temp.next\n",
+    "        temp.next=head\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_input()\n",
+    "print_LL(newHead,count)\n",
+    "\n"
    ]
   },
   {
