--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1777,6 +1777,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->5-->6-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Doubly linked list\n",
+    "\n",
+    "## Merge sort on linked list\n",
+    "\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->1-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Circular doubly linked list\n",
+    "\n",
+    "class CDLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head,count):\n",
+    "    temp = head\n",
+    "    c=count\n",
+    "    for i in range(c+1):\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "count =0\n",
+    "def take_ip():\n",
+    "    global count\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        count = count+1\n",
+    "        if head is None:\n",
+    "            head = CDLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = CDLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    temp = head\n",
+    "    while temp.next is not None:\n",
+    "        temp=temp.next\n",
+    "    temp.next = head\n",
+    "    head.prev = temp\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead,count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->\n",
+      "10-->1-->2-->3-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Doubly linked list -- Insertion at head\n",
+    "\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def insert_at_head(head):\n",
+    "    tail = head\n",
+    "    val = int(input())\n",
+    "    newNode = DLL(val)\n",
+    "    tail.prev = newNode\n",
+    "    newNode.next = tail\n",
+    "    return newNode\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "newHead1 = insert_at_head(newHead)\n",
+    "print_LL(newHead1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
