--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1886,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1940,6 +1940,146 @@
     "print(\"Original Linked List:\")\n",
     "print_LL(newHead)\n",
     "newHead1 = insert_at_head(newHead)\n",
+    "print_LL(newHead1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->\n",
+      "1-->2-->3-->4-->10-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Doubly linked list -- Insertion at tail\n",
+    "\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def insert_at_tail(head):\n",
+    "    tail = head\n",
+    "    val = int(input())\n",
+    "    newNode = DLL(val)\n",
+    "    while tail.next is not None:\n",
+    "        tail=tail.next\n",
+    "    tail.next = newNode\n",
+    "    newNode.prev = tail\n",
+    "    return head\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "newHead1 = insert_at_tail(newHead)\n",
+    "print_LL(newHead1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1<-->2<-->3<-->4<-->5<-->6<-->7<-->\n",
+      "1<-->2<-->3<-->10<-->4<-->5<-->6<-->7<-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Doubly linked list -- Insert at an index\n",
+    "\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"<-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def insert_at_index(head,index):\n",
+    "    index=index-1\n",
+    "    val = int(input())\n",
+    "    newNode = DLL(val)\n",
+    "    if head is None:\n",
+    "        head = newNode\n",
+    "        return head\n",
+    "    c =0\n",
+    "    temp=head\n",
+    "    while temp is not None:\n",
+    "        c=c+1\n",
+    "        temp=temp.next\n",
+    "    if index>c:\n",
+    "        return head\n",
+    "        \n",
+    "    test=head\n",
+    "    count=1\n",
+    "    while count<index:\n",
+    "        test = test.next\n",
+    "        count=count+1\n",
+    "    newHead = test.next\n",
+    "    newNode.next = newHead\n",
+    "    newNode.prev = test\n",
+    "    newHead.prev = newNode\n",
+    "    test.next = newNode\n",
+    "    return head\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "index = int(input(\"Enter index to insert\"))\n",
+    "newHead1 = insert_at_index(newHead,index)\n",
     "print_LL(newHead1)"
    ]
   },
